--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -125,9 +125,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Animations.cpp" />
+    <ClCompile Include="BarrelObject.cpp" />
     <ClCompile Include="Brick.cpp" />
+    <ClCompile Include="CabinObject.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Koopas.cpp" />
+    <ClCompile Include="MainCharacter.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Portal.cpp" />
     <ClCompile Include="TiledMap.cpp" />
@@ -141,12 +144,16 @@
     <ClCompile Include="Scence.cpp" />
     <ClCompile Include="Sprites.cpp" />
     <ClCompile Include="Textures.cpp" />
+    <ClCompile Include="WheelObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animations.h" />
+    <ClInclude Include="BarrelObject.h" />
     <ClInclude Include="Brick.h" />
+    <ClInclude Include="CabinObject.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="Koopas.h" />
+    <ClInclude Include="MainCharacter.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Portal.h" />
     <ClInclude Include="TiledMap.h" />
@@ -160,6 +167,7 @@
     <ClInclude Include="Scence.h" />
     <ClInclude Include="Sprites.h" />
     <ClInclude Include="Textures.h" />
+    <ClInclude Include="WheelObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
