--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -128,8 +128,10 @@
     <ClCompile Include="BarrelObject.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="CabinObject.cpp" />
+    <ClCompile Include="Dome.cpp" />
     <ClCompile Include="EnemyObject.cpp" />
     <ClCompile Include="EnemyObject1.cpp" />
+    <ClCompile Include="Floater.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Human.cpp" />
     <ClCompile Include="Koopas.cpp" />
@@ -157,8 +159,10 @@
     <ClInclude Include="BarrelObject.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="CabinObject.h" />
+    <ClInclude Include="Dome.h" />
     <ClInclude Include="EnemyObject.h" />
     <ClInclude Include="EnemyObject1.h" />
+    <ClInclude Include="Floater.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="Human.h" />
     <ClInclude Include="Koopas.h" />
