--- a/05-ScenceManager/05-ScenceManager.vcxproj.filters
+++ b/05-ScenceManager/05-ScenceManager.vcxproj.filters
@@ -108,6 +108,12 @@
     <ClCompile Include="Human.cpp">
       <Filter>Source Files\MainCharacterObjects</Filter>
     </ClCompile>
+    <ClCompile Include="Dome.cpp">
+      <Filter>Source Files\EnemyObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Floater.cpp">
+      <Filter>Source Files\EnemyObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Brick.h">
@@ -190,6 +196,12 @@
     </ClInclude>
     <ClInclude Include="Human.h">
       <Filter>Header Files\MainCharacterObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Dome.h">
+      <Filter>Header Files\EnemyObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Floater.h">
+      <Filter>Header Files\EnemyObjects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
