Add hub objects, fix wheel object.

--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -133,11 +133,13 @@
     <ClCompile Include="EnemyObject1.cpp" />
     <ClCompile Include="Floater.cpp" />
     <ClCompile Include="Grid.cpp" />
+    <ClCompile Include="GunHub.cpp" />
     <ClCompile Include="Human.cpp" />
     <ClCompile Include="Koopas.cpp" />
     <ClCompile Include="MainCharacter.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Portal.cpp" />
+    <ClCompile Include="PowerHub.cpp" />
     <ClCompile Include="Spider.cpp" />
     <ClCompile Include="TiledMap.cpp" />
     <ClCompile Include="Utils.cpp" />
@@ -164,11 +166,14 @@
     <ClInclude Include="EnemyObject1.h" />
     <ClInclude Include="Floater.h" />
     <ClInclude Include="Grid.h" />
+    <ClInclude Include="GunHub.h" />
+    <ClInclude Include="HovHub.h" />
     <ClInclude Include="Human.h" />
     <ClInclude Include="Koopas.h" />
     <ClInclude Include="MainCharacter.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Portal.h" />
+    <ClInclude Include="PowerHub.h" />
     <ClInclude Include="Spider.h" />
     <ClInclude Include="TiledMap.h" />
     <ClInclude Include="Utils.h" />
