--- a/05-ScenceManager/05-ScenceManager.vcxproj.filters
+++ b/05-ScenceManager/05-ScenceManager.vcxproj.filters
@@ -25,6 +25,12 @@
     <Filter Include="Source Files\EnemyObjects">
       <UniqueIdentifier>{1c41fddf-29cf-41a6-be75-d903c023adbd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Hub">
+      <UniqueIdentifier>{b1a3a768-8837-4e24-8077-157d440b4862}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Hub">
+      <UniqueIdentifier>{2da29e54-d4da-454e-bad0-567ec78c2023}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Brick.cpp">
@@ -114,6 +120,12 @@
     <ClCompile Include="Floater.cpp">
       <Filter>Source Files\EnemyObjects</Filter>
     </ClCompile>
+    <ClCompile Include="PowerHub.cpp">
+      <Filter>Source Files\Hub</Filter>
+    </ClCompile>
+    <ClCompile Include="GunHub.cpp">
+      <Filter>Source Files\Hub</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Brick.h">
@@ -202,6 +214,15 @@
     </ClInclude>
     <ClInclude Include="Floater.h">
       <Filter>Header Files\EnemyObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="PowerHub.h">
+      <Filter>Header Files\Hub</Filter>
+    </ClInclude>
+    <ClInclude Include="GunHub.h">
+      <Filter>Header Files\Hub</Filter>
+    </ClInclude>
+    <ClInclude Include="HovHub.h">
+      <Filter>Header Files\Hub</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
