--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -128,9 +128,11 @@
     <ClCompile Include="BarrelObject.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="CabinObject.cpp" />
+    <ClCompile Include="Cannon.cpp" />
     <ClCompile Include="Dome.cpp" />
     <ClCompile Include="EnemyObject.cpp" />
     <ClCompile Include="EnemyObject1.cpp" />
+    <ClCompile Include="Eyeball.cpp" />
     <ClCompile Include="Floater.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="GunHub.cpp" />
@@ -161,9 +163,11 @@
     <ClInclude Include="BarrelObject.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="CabinObject.h" />
+    <ClInclude Include="Cannon.h" />
     <ClInclude Include="Dome.h" />
     <ClInclude Include="EnemyObject.h" />
     <ClInclude Include="EnemyObject1.h" />
+    <ClInclude Include="Eyeball.h" />
     <ClInclude Include="Floater.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="GunHub.h" />
