--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -131,18 +131,17 @@
     <ClCompile Include="Cannon.cpp" />
     <ClCompile Include="Dome.cpp" />
     <ClCompile Include="EnemyObject.cpp" />
-    <ClCompile Include="EnemyObject1.cpp" />
     <ClCompile Include="Eyeball.cpp" />
     <ClCompile Include="Floater.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="GunHub.cpp" />
     <ClCompile Include="Human.cpp" />
+    <ClCompile Include="Jumper.cpp" />
     <ClCompile Include="Koopas.cpp" />
     <ClCompile Include="MainCharacter.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Portal.cpp" />
     <ClCompile Include="PowerHub.cpp" />
-    <ClCompile Include="Spider.cpp" />
     <ClCompile Include="Spike.cpp" />
     <ClCompile Include="TiledMap.cpp" />
     <ClCompile Include="Utils.cpp" />
@@ -167,19 +166,21 @@
     <ClInclude Include="Cannon.h" />
     <ClInclude Include="Dome.h" />
     <ClInclude Include="EnemyObject.h" />
-    <ClInclude Include="EnemyObject1.h" />
     <ClInclude Include="Eyeball.h" />
     <ClInclude Include="Floater.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="GunHub.h" />
     <ClInclude Include="HovHub.h" />
     <ClInclude Include="Human.h" />
+    <ClInclude Include="Insect.h" />
+    <ClInclude Include="Jumper.h" />
     <ClInclude Include="Koopas.h" />
     <ClInclude Include="MainCharacter.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="Orb.h" />
     <ClInclude Include="Portal.h" />
     <ClInclude Include="PowerHub.h" />
-    <ClInclude Include="Spider.h" />
+    <ClInclude Include="Skull.h" />
     <ClInclude Include="Spike.h" />
     <ClInclude Include="TiledMap.h" />
     <ClInclude Include="Utils.h" />
