--- a/05-ScenceManager/05-ScenceManager.vcxproj.filters
+++ b/05-ScenceManager/05-ScenceManager.vcxproj.filters
@@ -105,16 +105,10 @@
     <ClCompile Include="EnemyObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="EnemyObject1.cpp">
-      <Filter>Source Files\EnemyObjects</Filter>
-    </ClCompile>
     <ClCompile Include="Weapon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Worm.cpp">
-      <Filter>Source Files\EnemyObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="Spider.cpp">
       <Filter>Source Files\EnemyObjects</Filter>
     </ClCompile>
     <ClCompile Include="Human.cpp">
@@ -140,6 +134,9 @@
     </ClCompile>
     <ClCompile Include="Spike.cpp">
       <Filter>Source Files\ItemObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Jumper.cpp">
+      <Filter>Source Files\EnemyObjects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -209,16 +206,10 @@
     <ClInclude Include="EnemyObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="EnemyObject1.h">
-      <Filter>Header Files\EnemyObjects</Filter>
-    </ClInclude>
     <ClInclude Include="Weapon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Worm.h">
-      <Filter>Header Files\EnemyObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="Spider.h">
       <Filter>Header Files\EnemyObjects</Filter>
     </ClInclude>
     <ClInclude Include="Human.h">
@@ -247,6 +238,18 @@
     </ClInclude>
     <ClInclude Include="Spike.h">
       <Filter>Header Files\ItemObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Jumper.h">
+      <Filter>Header Files\EnemyObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Insect.h">
+      <Filter>Header Files\EnemyObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Orb.h">
+      <Filter>Header Files\EnemyObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Skull.h">
+      <Filter>Header Files\EnemyObjects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
