create teleporter incomplete

--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Portal.cpp" />
     <ClCompile Include="PowerHub.cpp" />
     <ClCompile Include="Spike.cpp" />
+    <ClCompile Include="Teleporter.cpp" />
     <ClCompile Include="TiledMap.cpp" />
     <ClCompile Include="Utils.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -182,6 +183,7 @@
     <ClInclude Include="PowerHub.h" />
     <ClInclude Include="Skull.h" />
     <ClInclude Include="Spike.h" />
+    <ClInclude Include="Teleporter.h" />
     <ClInclude Include="TiledMap.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Game.h" />
