Add insect enemy from Dat.

--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="GunHub.cpp" />
     <ClCompile Include="Human.cpp" />
+    <ClCompile Include="Insect.cpp" />
     <ClCompile Include="IntroScence.cpp" />
     <ClCompile Include="Jumper.cpp" />
     <ClCompile Include="Koopas.cpp" />
