--- a/05-ScenceManager/05-ScenceManager.vcxproj.filters
+++ b/05-ScenceManager/05-ScenceManager.vcxproj.filters
@@ -140,15 +140,18 @@
     </ClCompile>
     <ClCompile Include="Teleporter.cpp">
       <Filter>Source Files\EnemyObjects</Filter>
-	</ClCompile>
+    </ClCompile>
     <ClCompile Include="Orb.cpp">
-	    <Filter>Source Files\EnemyObjects</Filter>
-	  </ClCompile>
+      <Filter>Source Files\EnemyObjects</Filter>
+    </ClCompile>
     <ClCompile Include="IntroScence.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="EndingScence.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Insect.cpp">
+      <Filter>Source Files\EnemyObjects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -265,7 +268,7 @@
     </ClInclude>
     <ClInclude Include="Teleporter.h">
       <Filter>Header Files\EnemyObjects</Filter>
-	</ClInclude>
+    </ClInclude>
     <ClInclude Include="IntroScence.h">
       <Filter>Header Files</Filter>
     </ClInclude>
