--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Scence.cpp" />
     <ClCompile Include="Sprites.cpp" />
     <ClCompile Include="Textures.cpp" />
+    <ClCompile Include="Vehicle.cpp" />
     <ClCompile Include="Weapon.cpp" />
     <ClCompile Include="WheelObject.cpp" />
     <ClCompile Include="Worm.cpp" />
@@ -201,6 +202,7 @@
     <ClInclude Include="Scence.h" />
     <ClInclude Include="Sprites.h" />
     <ClInclude Include="Textures.h" />
+    <ClInclude Include="Vehicle.h" />
     <ClInclude Include="Weapon.h" />
     <ClInclude Include="WheelObject.h" />
     <ClInclude Include="Worm.h" />
