Chỉnh camera, sửa map D, thêm kiểu Brick, sửa lỗi va chạm Orb, thêm file Stair.h, Stair.cpp.

--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Portal.cpp" />
     <ClCompile Include="PowerHub.cpp" />
     <ClCompile Include="Spike.cpp" />
+    <ClCompile Include="Stair.cpp" />
     <ClCompile Include="Teleporter.cpp" />
     <ClCompile Include="TiledMap.cpp" />
     <ClCompile Include="Utils.cpp" />
@@ -190,6 +191,7 @@
     <ClInclude Include="PowerHub.h" />
     <ClInclude Include="Skull.h" />
     <ClInclude Include="Spike.h" />
+    <ClInclude Include="Stair.h" />
     <ClInclude Include="Teleporter.h" />
     <ClInclude Include="TiledMap.h" />
     <ClInclude Include="Utils.h" />
