Thêm logic cho Boss.

--- a/05-ScenceManager/05-ScenceManager.vcxproj.filters
+++ b/05-ScenceManager/05-ScenceManager.vcxproj.filters
@@ -118,13 +118,11 @@
     <ClCompile Include="Weapon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-<<<<<<< HEAD
     <ClCompile Include="Utils.cpp">
       <Filter>Header Files</Filter>
-=======
+	</ClCompile>
     <ClCompile Include="Vehicle.cpp">
       <Filter>Source Files\MainCharacterObjects</Filter>
->>>>>>> master
     </ClCompile>
     <ClCompile Include="Skull.cpp">
       <Filter>Source Files\EnemyObjects</Filter>
