--- a/05-ScenceManager/05-ScenceManager.vcxproj.filters
+++ b/05-ScenceManager/05-ScenceManager.vcxproj.filters
@@ -120,7 +120,7 @@
     </ClCompile>
     <ClCompile Include="Utils.cpp">
       <Filter>Header Files</Filter>
-	</ClCompile>
+    </ClCompile>
     <ClCompile Include="Vehicle.cpp">
       <Filter>Source Files\MainCharacterObjects</Filter>
     </ClCompile>
@@ -132,6 +132,12 @@
     </ClCompile>
     <ClCompile Include="Boss.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Pincer.cpp">
+      <Filter>Source Files\BossElements</Filter>
+    </ClCompile>
+    <ClCompile Include="Coupling.cpp">
+      <Filter>Source Files\BossElements</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -267,6 +273,12 @@
     <ClInclude Include="Boss.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Pincer.h">
+      <Filter>Header Files\BossElements</Filter>
+    </ClInclude>
+    <ClInclude Include="Coupling.h">
+      <Filter>Header Files\BossElements</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
@@ -298,6 +310,12 @@
     </Filter>
     <Filter Include="Source Files\MainCharacterObjects">
       <UniqueIdentifier>{cbdb355c-d240-4c13-9cfa-1b882cbaaa30}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\BossElements">
+      <UniqueIdentifier>{5875a0e6-a6d1-4d55-b3dc-8b30b4bff1f2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\BossElements">
+      <UniqueIdentifier>{bed60ae5-8675-451f-b209-697e268d7f2d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
