--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="CabinObject.cpp" />
     <ClCompile Include="Cannon.cpp" />
+    <ClCompile Include="Coupling.cpp" />
     <ClCompile Include="Dome.cpp" />
     <ClCompile Include="EndingScence.cpp" />
     <ClCompile Include="EnemyObject.cpp" />
@@ -146,6 +147,7 @@
     <ClCompile Include="MainCharacter.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Orb.cpp" />
+    <ClCompile Include="Pincer.cpp" />
     <ClCompile Include="Portal.cpp" />
     <ClCompile Include="PowerHub.cpp" />
     <ClCompile Include="Skull.cpp" />
@@ -176,6 +178,7 @@
     <ClInclude Include="Brick.h" />
     <ClInclude Include="CabinObject.h" />
     <ClInclude Include="Cannon.h" />
+    <ClInclude Include="Coupling.h" />
     <ClInclude Include="Dome.h" />
     <ClInclude Include="EndingScence.h" />
     <ClInclude Include="EnemyObject.h" />
@@ -192,6 +195,7 @@
     <ClInclude Include="MainCharacter.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Orb.h" />
+    <ClInclude Include="Pincer.h" />
     <ClInclude Include="Portal.h" />
     <ClInclude Include="PowerHub.h" />
     <ClInclude Include="Skull.h" />
