Fix rocket, human,switch scence

--- a/05-ScenceManager/05-ScenceManager.vcxproj.filters
+++ b/05-ScenceManager/05-ScenceManager.vcxproj.filters
@@ -180,9 +180,6 @@
     <ClInclude Include="HovHub.h">
       <Filter>Header Files\Hub</Filter>
     </ClInclude>
-    <ClInclude Include="PowerHub.h">
-      <Filter>Header Files\Hub</Filter>
-    </ClInclude>
     <ClInclude Include="Spike.h">
       <Filter>Header Files\ItemObjects</Filter>
     </ClInclude>
@@ -277,13 +274,16 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Pincer.h">
-      <Filter>Header Files\BossElements</Filter>
+      <Filter>Header Files\Hub\BossElements</Filter>
     </ClInclude>
     <ClInclude Include="Coupling.h">
-      <Filter>Header Files\BossElements</Filter>
+      <Filter>Header Files\Hub\BossElements</Filter>
     </ClInclude>
     <ClInclude Include="Lava.h">
       <Filter>Header Files\ItemObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="PowerHub.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -317,11 +317,11 @@
     <Filter Include="Source Files\MainCharacterObjects">
       <UniqueIdentifier>{cbdb355c-d240-4c13-9cfa-1b882cbaaa30}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\BossElements">
-      <UniqueIdentifier>{5875a0e6-a6d1-4d55-b3dc-8b30b4bff1f2}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\BossElements">
       <UniqueIdentifier>{bed60ae5-8675-451f-b209-697e268d7f2d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Hub\BossElements">
+      <UniqueIdentifier>{5875a0e6-a6d1-4d55-b3dc-8b30b4bff1f2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
