--- a/05-ScenceManager/05-ScenceManager.vcxproj.filters
+++ b/05-ScenceManager/05-ScenceManager.vcxproj.filters
@@ -148,6 +148,9 @@
     <ClCompile Include="Sound.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MenuScence.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cannon.h">
@@ -288,13 +291,16 @@
     <ClInclude Include="Lava.h">
       <Filter>Header Files\ItemObjects</Filter>
     </ClInclude>
-    <ClInclude Include="PowerHub.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="dxaudio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Sound.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PowerHub.h">
+      <Filter>Header Files\Hub</Filter>
+    </ClInclude>
+    <ClInclude Include="MenuScence.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
