--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="Coupling.cpp" />
     <ClCompile Include="Dome.cpp" />
     <ClCompile Include="dxaudio.cpp" />
+    <ClCompile Include="Egg.cpp" />
     <ClCompile Include="EndingScence.cpp" />
     <ClCompile Include="EnemyObject.cpp" />
     <ClCompile Include="Eyeball.cpp" />
@@ -143,6 +144,7 @@
     <ClCompile Include="Human.cpp" />
     <ClCompile Include="Insect.cpp" />
     <ClCompile Include="IntroScence.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="Jumper.cpp" />
     <ClCompile Include="Koopas.cpp" />
     <ClCompile Include="Lava.cpp" />
@@ -185,6 +187,7 @@
     <ClInclude Include="Coupling.h" />
     <ClInclude Include="Dome.h" />
     <ClInclude Include="dxaudio.h" />
+    <ClInclude Include="Egg.h" />
     <ClInclude Include="EndingScence.h" />
     <ClInclude Include="EnemyObject.h" />
     <ClInclude Include="Eyeball.h" />
@@ -195,6 +198,7 @@
     <ClInclude Include="Human.h" />
     <ClInclude Include="Insect.h" />
     <ClInclude Include="IntroScence.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="Jumper.h" />
     <ClInclude Include="Koopas.h" />
     <ClInclude Include="Lava.h" />
