Update mine + fix scence D

--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -152,12 +152,14 @@
     <ClCompile Include="MainCharacter.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="MenuScence.cpp" />
+    <ClCompile Include="Mine.cpp" />
     <ClCompile Include="Orb.cpp" />
     <ClCompile Include="Pincer.cpp" />
     <ClCompile Include="Portal.cpp" />
     <ClCompile Include="PowerHub.cpp" />
     <ClCompile Include="Skull.cpp" />
     <ClCompile Include="Sound.cpp" />
+    <ClCompile Include="SpecialPortal.cpp" />
     <ClCompile Include="Spike.cpp" />
     <ClCompile Include="Stair.cpp" />
     <ClCompile Include="Teleporter.cpp" />
@@ -207,12 +209,14 @@
     <ClInclude Include="MainCharacter.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="MenuScence.h" />
+    <ClInclude Include="Mine.h" />
     <ClInclude Include="Orb.h" />
     <ClInclude Include="Pincer.h" />
     <ClInclude Include="Portal.h" />
     <ClInclude Include="PowerHub.h" />
     <ClInclude Include="Skull.h" />
     <ClInclude Include="Sound.h" />
+    <ClInclude Include="SpecialPortal.h" />
     <ClInclude Include="Spike.h" />
     <ClInclude Include="Stair.h" />
     <ClInclude Include="Teleporter.h" />
